fixed overflow

--- a/style.css
+++ b/style.css
@@ -177,8 +177,7 @@ input[type="number"]:focus {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  font-size: smaller;
-  font-weight: 500;
+  font-weight: bold;
 }
 
 
